2012-09-21  Ilya Tikhonovsky  <loislo@chromium.org>

        Web Inspector: extract Vector instrumentation from core NMI code into MemoryInstrumentationVector.h header.
        https://bugs.webkit.org/show_bug.cgi?id=96650

        Reviewed by Vsevolod Vlasov.

        Added reportMemoryUsage free template function with default body to core NMI code
        and add custom version of reportMemoryUsage function for Vectors.

        * GNUmakefile.list.am:
        * WTF.gypi:
        * WTF.pro:
        * WTF.vcproj/WTF.vcproj:
        * WTF.xcodeproj/project.pbxproj:
        * wtf/MemoryInstrumentation.h:
        (WTF):
        (MemoryInstrumentation):
        (WTF::MemoryInstrumentation::addObjectImpl):
        * wtf/MemoryInstrumentationVector.h: Added.
        (WTF):
        (WTF::instrumentVectorValues):
        (WTF::reportMemoryUsage):

2012-09-24  Mark Lam  <mark.lam@apple.com>

        Deleting the classic interpreter and cleaning up some build options.
        https://bugs.webkit.org/show_bug.cgi?id=96969.

        Reviewed by Geoffrey Garen.

        * wtf/OSAllocatorPosix.cpp:
        (WTF::OSAllocator::reserveAndCommit):
        * wtf/Platform.h:

2012-09-24  Patrick Gansterer  <paroga@webkit.org>

        Remove String::operator+=()
        https://bugs.webkit.org/show_bug.cgi?id=96172

        Reviewed by Benjamin Poulain.

        * wtf/Platform.h:
        * wtf/text/WTFString.h:

2012-09-24  Benjamin Poulain  <benjamin@webkit.org>

        Add support for query encoding to WTFURL
        https://bugs.webkit.org/show_bug.cgi?id=97422

        Reviewed by Adam Barth.

        Expose character conversion through the new abstract class URLQueryCharsetConverter.
        URLQueryCharsetConverter is implemented by WebCore to expose the TextEncoding classes.

        Unfortunatelly that forces us to bring over URLBuffer in the public API. We may be able
        to mitigate that later when moving WTFURL to more templates.
